// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component equal early snapshots with terms and conditions 1`] = `
<styled.div>
  <Segment>
    <Form
      as="form"
    >
      <FormField>
        <FormInput
          as={[Function]}
          control={[Function]}
          label="First Name"
          placeholder="First Name"
        />
      </FormField>
      <FormField>
        <FormInput
          as={[Function]}
          control={[Function]}
          label="Enter Password"
          placeholder="Enter Password"
        />
      </FormField>
      <FormField>
        <Checkbox
          type="checkbox"
        />
      </FormField>
      <Button
        as="button"
        color="blue"
        type="submit"
      >
        Submit
      </Button>
    </Form>
  </Segment>
</styled.div>
`;

exports[`Form component equal early snapshots without terms and conditions 1`] = `
<styled.div>
  <Segment>
    <Form
      as="form"
    >
      <FormField>
        <FormInput
          as={[Function]}
          control={[Function]}
          label="First Name"
          placeholder="First Name"
        />
      </FormField>
      <FormField>
        <FormInput
          as={[Function]}
          control={[Function]}
          label="Enter Password"
          placeholder="Enter Password"
        />
      </FormField>
      <FormField />
      <Button
        as="button"
        color="blue"
        type="submit"
      >
        Submit
      </Button>
    </Form>
  </Segment>
</styled.div>
`;
